c4prj2_input/grade.txt
Grading at Mon Oct  7 18:18:20 UTC 2019
Compiling cards.c -> cards.o
cards.c: In function ‘card_from_letters’:
cards.c:82:10: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
   card_t temp;
          ^
cards.c: At top level:
cards.c:108:3: error: expected identifier or ‘(’ before ‘if’
   if(suit_let=='s'){
   ^
cards.c:111:3: error: expected identifier or ‘(’ before ‘else’
   else if(suit_let=='h'){
   ^
cards.c:114:3: error: expected identifier or ‘(’ before ‘else’
   else if(suit_let=='c'){temp.suit=CLUBS;}
   ^
cards.c:115:3: error: expected identifier or ‘(’ before ‘else’
   else if(suit_let=='d'){temp.suit=DIAMONDS;}
   ^
cards.c:118:3: error: expected identifier or ‘(’ before ‘}’ token
   }
   ^
cards.c:119:3: error: expected identifier or ‘(’ before ‘return’
   return temp;
   ^
cards.c:120:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
cards.c: In function ‘ranking_to_string’:
cards.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cards.c: In function ‘card_from_letters’:
cards.c:106:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1: all warnings being treated as errors
Compilation of cards.c failed

Overall Grade: F
